manifests/apps/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-https
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - prowlarr.example.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: prowlarr
          port: 9696
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
