manifests/apps/prowlarr/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prowlarr-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prowlarr-https
  oidc:
    provider:
      issuer: https://iam.example.com/auth/v1/
    clientIDRef:
      name: prowlarr-oidc-secret
    clientSecret:
      name: prowlarr-oidc-secret
    redirectURL: https://prowlarr.example.com/oauth2/callback
    logoutPath: /logout
